# tensor-logic-runtime

./: README.md
compiler/tl_runtime_v0_7_cpp/: CMakeLists.txt  README.md
compiler/tl_runtime_v0_7_cpp/include/tl/ast/: nodes.hpp
compiler/tl_runtime_v0_7_cpp/include/tl/ir/: builder.hpp  ir.hpp
compiler/tl_runtime_v0_7_cpp/include/tl/parser/: lexer.hpp  parser.hpp  token.hpp
compiler/tl_runtime_v0_7_cpp/include/tl/runtime/: index_domain.hpp  reduce_executor.hpp  runtime.hpp  tensor_store.hpp
compiler/tl_runtime_v0_7_cpp/src/: main.cpp
compiler/tl_runtime_v0_7_cpp/src/ir/: builder.cpp  ir.cpp
compiler/tl_runtime_v0_7_cpp/src/parser/: lexer.cpp  parser.cpp
compiler/tl_runtime_v0_7_cpp/src/runtime/: reduce_executor.cpp  runtime.cpp
compiler/tl_runtime_v0_7_cpp/tests/: parser_runtime_smoke.cpp  reduce_executor_test.cpp
docs/: CVCL_v2_v0.7.md  Example_Minimal_Reduce_Execution.md  Future_Execution_Dispatch_Layer.md  Phase2_Design_Guardrail_v0.7.2.md  Post_Phase2_Work_Overview.md  Profile_Architecture_v2_v0.7.md  TL_Runtime_DomainBinder_Phase1_v0.7.2.md  TL_Runtime_Execution_Dispatch_Notes.md  TL_Runtime_Phase1_Minimal_Execution_Flow_v0.7.2.md  TL_Runtime_v0.7_Release_Notes_Medium.md  TL_Runtime_v0.7_Release_Notes_Short.md  persona_layer_spec_public_v0_7.md  reference_index_domain_v0.7.1.md  reference_tensor_store_v0.7.1.md  tld_diagram_ids_v0.7.md  tld_diagrams_index_v0.7.md  tld_runtime_architecture_v0.7_EN.md  v1.1-alpha_Non-Goals_and_Exclusions.md
src/: ast.py  lexer.py  parser.py  visitors.py
src/runtime/: __init__.py  (+3 more)
tests/: test_lexer_parser.py
(+42 files in other folders)
